bonus end + superbonus

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -19,9 +19,9 @@
 
         <div class="input-group __input">
             <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-              <option id="easy" value="easy">Easy</option>
-              <option id="medium" value="medium">Medium</option>
-              <option id="difficult" value="difficult">Difficult</option>
+              <option  value="easy">Easy</option>
+              <option  value="medium">Medium</option>
+              <option  value="difficult">Difficult</option>
             </select>
             <button id="button" class="btn __btn" type="button">Choose</button>
           </div>
@@ -34,7 +34,7 @@
         <div id="__grid-container">
 
         </div>
-        
+
         <div id="output"></div>
 
 
